<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menu_delete"
        android:orderInCategory="120"
        android:title="@string/menu_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bounds"
        android:orderInCategory="130"
        android:title="Show Bounds"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_grid"
        android:orderInCategory="131"
        android:title="Show Grid"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_cells"
        android:orderInCategory="132"
        android:title="Show Cells"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_radar"
        android:orderInCategory="132"
        android:title="Show Radar"
        android:checkable="true"
        android:checked="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_sort"
        android:orderInCategory="199"
        android:title="@string/menu_sort"
        app:showAsAction="never" >

        <menu
            android:orderInCategory="104"
            android:checkableBehavior="single"
            android:id="@+id/sortBy">

            <group
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_sortByTrip"
                    android:title="@string/menu_sortByTrip" />

                <item
                    android:id="@+id/menu_sortByDOW"
                    android:title="@string/menu_sortByDOW" />

                <item
                    android:id="@+id/menu_sortByHour"
                    android:title="@string/menu_sortByHour" />

                <item
                    android:id="@+id/menu_sortByStart"
                    android:title="@string/menu_sortByStart" />

                <item
                    android:id="@+id/menu_sortByLength"
                    android:title="@string/menu_sortByLength" />

                <item
                    android:id="@+id/menu_sortByPoints"
                    android:title="@string/menu_sortByPoints" />

            </group>

        </menu>
    </item>
</menu>